Update project title in README
Updated project title to reflect version change from Gemini 2.0 to Gemini flash 2.5.

--- a/.README.md
+++ b/.README.md
@@ -1,4 +1,4 @@
-# 🤖 AI Automation Lab (n8n + Gemini 2.0)
+# 🤖 AI Automation Lab (n8n + Gemini flash 2.5)
 
 Este projeto consiste em um laboratório de automação de processos utilizando Inteligência Artificial, hospedado localmente em um servidor **Debian 13** virtualizado via VirtualBox.
 
@@ -24,5 +24,4 @@ Durante a implementação, apliquei conceitos práticos de:
 3. **Segurança Cibernética:** Proteção de chaves de API e dados sensíveis através de boas práticas de versionamento.
 4. **Resiliência:** Implementação de lógica de tratamento de erros no workflow de IA para garantir respostas estáveis.
 
----
-*Desenvolvido por Victor Barbosa*
+
